--- a/jaxb-ri/jxc/pom.xml
+++ b/jaxb-ri/jxc/pom.xml
@@ -95,7 +95,7 @@ holder.
         </dependency>
         <dependency>
             <groupId>org.netbeans.external</groupId>
-            <artifactId>javac-api-nb-7.0-b07</artifactId>
+            <artifactId>nb-javac-api</artifactId>
         </dependency>
     </dependencies>
 
